--- a/package.json
+++ b/package.json
@@ -1,13 +1,16 @@
 {
   "name": "ngx-pwa-playground",
-  "version": "0.0.0",
+  "version": "1.0.0",
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
-    "deploy":"ng run ngx-pwa-playground:deploy"
+    "deploy": "ng run ngx-pwa-playground:deploy",
+    "release": "standard-version --release-as major",
+    "release:minor": "standard-version --release-as minor",
+    "release:patch": "standard-version --release-as patch"
   },
   "private": true,
   "dependencies": {
@@ -47,6 +50,7 @@
     "karma-jasmine": "~4.0.0",
     "karma-jasmine-html-reporter": "^1.5.0",
     "open": "^7.0.3",
+    "standard-version": "^9.3.0",
     "typescript": "~4.2.3"
   }
 }
